--- a/Justice/src/index.css
+++ b/Justice/src/index.css
@@ -1,5 +1,12 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-color: #333333;
+    font-family: helvetica, arial, sans-serif;
+    color: white;
+}
+
+p {
+    color: lime;
 }
