--- a/react-backend/client/src/App.css
+++ b/react-backend/client/src/App.css
@@ -1,28 +1,54 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #333333;
+  font-family: helvetica, arial, sans-serif;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+button {
+  background-color: #333333;
+  border: none;
+  color: white;
+  margin: 3px;
+  padding: 8px;
+  text-align: center;
+  font-size: 18px;
 }
 
-.App-intro {
-  font-size: large;
+.header {
+  grid-column: 1 / 3;
+  grid-row: 1;
+  background-color: #131313;
 }
+.sliderContainer {
+  grid-row: 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  padding: 14px;
+}
+.sidebar {
+  grid-column: 1;
+  grid-row: 2 / 5;
+  background-color: #131313;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.main {
+  grid-column: 2;
+  grid-row: 3;
+  overflow-y: scroll;
+}
+/* .footer {
+  grid-column: 2 / 3;
+  grid-row: 4;
+  background-color: #131313;
+  overflow-y: scroll;
+} */
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 8vh 7vh 85vh;
 }
