--- a/Justice/src/App.css
+++ b/Justice/src/App.css
@@ -32,7 +32,7 @@ button {
   grid-column: 1;
   grid-row: 2 / 5;
   background-color: #131313;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 .main {
