--- a/react-backend/client/src/App.css
+++ b/react-backend/client/src/App.css
@@ -19,6 +19,8 @@ button {
 .header {
   grid-column: 1 / 3;
   grid-row: 1;
+  display: grid;
+  grid-template-columns: 200px 1fr;
   background-color: #131313;
 }
 .sliderContainer {
@@ -30,7 +32,7 @@ button {
 }
 .sidebar {
   grid-column: 1;
-  grid-row: 2 / 5;
+  grid-row: 2 / 4;
   background-color: #131313;
   overflow-y: hidden;
   overflow-x: hidden;
