--- a/react-backend/client/src/App.css
+++ b/react-backend/client/src/App.css
@@ -20,7 +20,7 @@ button {
   grid-column: 1 / 3;
   grid-row: 1;
   display: grid;
-  grid-template-columns: 200px 1fr;
+  grid-template-columns: 200px 3fr 1fr;
   background-color: #131313;
 }
 .sliderContainer {
